--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -9,8 +9,12 @@ textarea {
     font-family: 'Roboto';
 }
 
+body {
+    background: #111111;
+    overflow: hidden;
+}
+
 .big-header {
-    background-color: #111111;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -18,32 +22,60 @@ textarea {
     flex-wrap: wrap;
     flex-direction: column;
     color: white;
+    z-index: -2;
 }
 
 .background {
     position: absolute;
     width: auto;
-    height: 100vh;
+    width: 100vw;
+    z-index: -1;
 }
 
-.bill {
-    position: relative;
-    z-index: 1;
+.wrapper {
+    position: absolute;
+    bottom: 100px;
+}
+
+.message {
+    background: rgba(255, 255, 255, 0.8);
+    color: black;
+    padding: 10px 30px;
+    min-width: 500px;
+    max-width: 700px;
+    min-height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 .button {
-    color: $hetic-green;
     text-decoration: none;
-    background: white;
-    padding: 5px;
+    background: #333333;
+    padding: 10px 15px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
     border-radius: 5px;
     display: flex;
+    justify-content: center;
     border: none;
     position: relative;
+    cursor: pointer;
+}
+
+.wrapper--buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 h1 {
     position: relative;
+    font-size: 24px;
 }
 
 .menu-popover-enter {
